--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                   Universitas Pelita Bangsa
                 </h3>
                 <time class="text-xs tracking-wide dark:text-gray-600"
-                  >22023 - Now | Teknik Informatika
+                  >2023 - Now | Teknik Informatika
                 </time>
                 <p class="mt-3 text-justify">
                   Tugas UAS Semester 3. Pemrograman Web membuat Portfolio
@@ -397,6 +397,39 @@
                 target="_blank"
                 ><i class="ti ti-brand-github text-3xl float-end"></i
               ></a>
+            </div>
+          </div>
+        </div>
+
+        <!--Sertifikat-->
+        <div class="container mx-auto">
+          <div class="grid gap-4 my-16 lg:grid-cols-3">
+            <div
+              class="p-1 rounded-md shadow-md dark:bg-gray-50 dark:text-gray-900 hover:shadow-lg transform hover:scale-105 transition-all duration-300"
+            >
+              <img
+                src="./images/ML.png"
+                alt="Sertifikat ML"
+                class="rounded-md"
+              />
+            </div>
+            <div
+              class="p-1 rounded-md shadow-md dark:bg-gray-50 dark:text-gray-900 hover:shadow-lg transform hover:scale-105 transition-all duration-300"
+            >
+              <img
+                src="./images/JS.png"
+                alt="Sertifikat ML"
+                class="rounded-md"
+              />
+            </div>
+            <div
+              class="p-1 rounded-md shadow-md dark:bg-gray-50 dark:text-gray-900 hover:shadow-lg transform hover:scale-105 transition-all duration-300"
+            >
+              <img
+                src="./images/BE.png"
+                alt="Sertifikat ML"
+                class="rounded-md"
+              />
             </div>
           </div>
         </div>
